--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,12 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+div.subcription-grid {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 0.5fr 1fr;
+} 
+
+
 
 @media (prefers-color-scheme: light) {
   :root {
