--- a/src/index.css
+++ b/src/index.css
@@ -79,8 +79,40 @@ button:focus-visible {
 }
 div.subcription-grid {
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 0.5fr 1fr;
+  grid-template-rows: 0.5fr 0.5fr 1fr;
 } 
+
+
+
+/* Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #2E3440;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #D9D9D9; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #D9D9D9; 
+}
+
+div.tematics ::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: transparent;
+}
+  
 
 
 
